[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartllmops"
version = "0.1.0"
description = "A lightweight SDK for tracing and observability in RAG applications."
authors = [
    { name = "Srishti J Singh", email = "srishti.singh@sigmoidanlytics.com" }
]
dependencies = [
    "requests",
    "azure-cosmos"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartllmops*"]
